test/deca/context/invalid/decl_method_false_param.deca
class A {
    void error(B b) {}
}